<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>hiro_collision_avoidance_ros2</name>
  <version>0.0.0</version>
  <description>HIRO Collision Avoidance for ROS2</description>
  <maintainer email="carson.kohlbrenner@gmail.com">caleb</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <!-- ROS2 Dependencies -->
  <depend>rclcpp</depend>
  <depend>std_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>tf2_ros</depend>
  <depend>controller_manager_msgs</depend>

  <!-- System Dependencies -->
  <depend>eigen3_cmake_module</depend>
  <depend>Eigen3</depend>
  <depend>orocos_kdl</depend>
  <depend>kdl_parser</depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
